_sass/components/_toolkit.scss
.toolkit-header {
    &__text-group {
        display: flex; 
        flex-wrap: wrap; 
        justify-content: space-evenly;
        text-align: center;
        padding: 1.4rem 0;
        background-color: $color-pink;

        a {
            font-weight: 400;
            text-decoration: none;
            color: $color-black;
        }
        a:hover {
            color: $color-red;
            transform: scale(1.01);
        }

        .selected-category {
            font-weight: 700;
            color: $color-red;
        }
    }
}

.toolkit-background {
    background-color: $color-darkblue;
}

.suggest-guide-group {
    grid-column: 1 / -1;
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding-left: 1rem;
    padding-right: 1rem;
    text-align: center;
    margin: 2rem 0;
}

.suggest-guide-group h2 {
    font-style: normal;
    font-weight: normal;
    font-size: 1.75rem;
    color: $color-white;
    margin-bottom: 0;
}

.toolkit-flex-container {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    justify-content: left;
}

.toolkit-filters * {
    color: $color-white
}

.toolkit-filters .filter-tag-container {
    flex-direction: column;
    
    a {
        color: $color-white;
    }
}

.toolkit-flex-item.section-container {
    position: relative;
    max-width: 23rem;
    padding: 0rem;
    height: auto;
    margin: 0.5rem;
    overflow: hidden;
    
    a {
        width: 1.5rem;
    }
}

.toolkit-flex-item-img-container {
    height: 16em;
    overflow: hidden;
}

.toolkit-flex-item-img-container svg, 
.toolkit-flex-item-img-container img {
    width: 100%;
    height: 100%;
    object-fit: cover;
}

.resource-svg-icons {
    height: 17.5rem;    //or 14.5 rem
    width: 17.5rem;     //or 14.5 rem
    margin: 0 auto;
}

.toolkit-info-container {
    margin: 1rem 0rem 3.5rem;
    padding: 0rem 2rem;

    h3 {
        font-weight: normal;
        text-align: left;
        height: fit-content;
        font-size: 1.4rem;
        margin-bottom: 1.5rem;
        line-height: 1.5rem;
        max-height: fit-content;
    }
    p {
        margin: 1rem auto auto 0rem;
        line-height: 1.1rem;
        width: 100%;
    }
}

.toolkit-flex-item-status {
    position: absolute;
    font-size: 1.125rem;
    line-height: 1.2rem;
    right: 1rem;
    bottom: 1rem;
}

.no-results-message {
    color: $color-white;
    margin: 1rem;
}

.toolkit-red {
    color: $color-red
}

@media only screen and (max-width: 1430px) {
    .toolkit-header {

        &__text-group {
            padding-left: 0;
            padding-right: 0;
        }

        &__banner-item {
            font-size: 1.1rem;
            margin: 0 2.5rem;
        }
    }
}

@media #{$bp-below-desktop} {

    .toolkit-header {

        &__text-group {
            justify-content: space-evenly;
            align-items: center;
        }

        &__banner-item {
            font-size: .9rem;
            margin: 0 .6rem;
            max-width: 6rem;
            text-align: center;
        }
    }

    .toolkit-flex-container {
        grid-template-columns: repeat(2, 1fr);
    }

    .toolkit-flex-item {
        margin: 0 auto;
    }

    .resource-svg-icons {
        height: 15.5rem;
        width: 15.5rem;
    }
}

@media #{$bp-below-tablet} {
    .toolkit-svg {
        max-width: 350px;
    }

    .external-resources-text {
    text-align: left;
    }

    .toolkit-flex-item-img-container {
        height: auto;
        
        &.resource-svg-icons {
            height: 15.5rem;
        }
    }
}

.toolkit-flex-item {
    margin-bottom: 1.5rem;
}

@media #{$bp-below-mobile} {
    .toolkit-svg {
        max-width: 250px;
    }
    .suggest-guide-group {
        margin: 1.2rem 1rem;

        h2 {
            margin-bottom: 1rem;
        }
    }
    .toolkit-flex-container {
        display: flex;
        flex-wrap: wrap;
        align-content: center;
        flex-direction: column;
    }
    .external-resources-text {
    text-align: center;
    }   
}

@media #{$bp-below-mobile} {

    .toolkit-header {

        &__text-group {
            display: none;
        }

        &__banner-item {
            display: none;
        }
    }
}

.dropdown {
    margin: 0 auto;
}
#dropdown-select {
    width: 310px;
    height: 44px;
    background: $color-white;
    border: 1px solid rgba(0, 0, 0, 0.24);
    box-sizing: border-box;
    border-radius: 5px;
}

@media #{$bp-mobile-up} {
    .dropdown {
        display: none;
    }
    #dropdown-select {
        display: none;
        }
    }

// For display on very narrow screens such as Galaxy Fold. There are currently
// no sitewide settings for this size screen:
@media (max-width: 281px) {
    .suggest-guide-group {
        display: block;    
    }
    #dropdown-select {
        width: 216px;
    }
}

@media #{$bp-below-tablet} {
    .toolkit-filters *:not(button) {
        color: unset;
    }

    .toolkit-filters .filters-title {
        margin: 0 0.5rem;
    }

    .filtersDiv-background {
        background-color: $color-darkblue;
    }

    .toolkit-flex-container {
        grid-template-columns: repeat(1, 1fr);
        justify-content: center;
    }

    .toolkit-flex-item.section-container {
        max-width: none;
    }

    .toolkit-filters .filter-tag-container {
        margin: 10px 10px 0 10px;
        color: $color-white;
    }
}

